# treza-terraform

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  INTEGRATION_ROADMAP.md  INTEGRATION_SETUP.md  Makefile  PROJECT_TRACKER.md  README.md  ROADMAP.md  SECURITY.md  TERMINATE_FIX.md
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: .deploy-trigger  auto-tag.yml  deploy.yml  (+9 more)
docs/: ARCHITECTURE.md  FAQ.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
enclave-proxy/: .gitignore  Cargo.toml  Dockerfile.build
enclave-proxy/src/: health.rs  http_proxy.rs  kms_proxy.rs  logging.rs  main.rs  protocol.rs  supervisor.rs  vsock.rs
examples/: README.md
scripts/: backup.sh  benchmark.sh  build-all.sh  compare-backends.sh  cost-alert.sh  create-backend.sh  deploy-simplified.sh  deploy.sh  destroy.sh  drift-remediation.sh  health-check.sh  import-existing-resources.sh  inventory.sh  setup-environment.sh  smoke-test.sh  switch-environment.sh  tag-resources.sh  test.sh  validate-backend.sh  version.sh  view-logs.sh
terraform/: backend.conf  backend.conf.example  current_task_def.json  deployment_definition.json  main.tf  new_task_def.json  outputs.tf  providers.tf  terraform.tfvars.example  updated_deployment_definition.json  variables.tf
tests/: conftest.py  requirements.txt
(+76 files in other folders)
